# Codec

./: .gitignore  LICENSE  PKGBUILD  README.md  buddy.config  build.py  codec_dev.py  docs.md  main.py  requirements.txt  setup.py  stable.py  user_setup.py
assets/: logo-text.xcf
src/: pyproject.toml
src/assets/: logo.xcf
