[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Codec-widget"
version = "1.0"
authors = [
  { name="RallyCorder", email="gg64mail@protonmail.com" },
]
description = "Widget assistant with visual feedback for repetitive tasks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/RallyCorder/Codec"
Issues = "https://github.com/RallyCorder/Codec/issues"